package com.pi_v_b.sistema_de_monitoramento_de_ambientes;

public interface ArduinoReader {
    void start();
}
